<resources>
    <string name="app_name">Karierni center UL</string>
    <string name="ime">Ime in Priimek</string>
    <string name="zivljenjepis">Življenjepis</string>
    <string name="ulica">Ulica</string>
    <string name="hisnaSt">Hišna št.</string>
    <string name="postnaSt">Poštna št.</string>
    <string name="kraj">Kraj</string>
    <string name="kontakt">Kontakt</string>
    <string name="email">e-mail</string>
    <string name="telefonskaSt">Telefonska št.</string>
    <string name="izobrazba">Izobrazba</string>
    <string name="od">Od</string>
    <string name="oddo">Do</string>
    <string name="studijskaSmer">Študijska smer</string>
    <string name="gumbDodaj">DODAJ</string>
    <string name="delovnoMesto">Delovno mesto</string>
    <string name="delovneIzkusnje">Pretekle delovne izkušnje</string>
    <string name="ponudbaDel">Ponudba del</string>
    <string name="shrani">SHRANI</string>
    <string name="missingInputError">Izpolnite vsa polja</string>
    <string name="fileSaved">Podatki so bili uspešno shranjeni</string>
    <string name="home">Domov</string>
    <string name="events">Dogodki</string>
    <string name="placaNeto">€/h neto</string>
    <string name="prostaMesta">"Prosta mesta: "</string>
    <string name="trajanje">"Trajanje: "</string>
    <string name="delovnik">"Delovnik: "</string>
    <string name="zacetekDela">"Začetek dela: "</string>
    <string name="pokaziVec">POKAŽI VEČ</string>
    <string name="prijaviSe">PRIJAVI SE</string>
    <string name="mojProfil">Moj profil</string>
    <string name="shranjenaDela">Shranjena dela</string>
    <string name="dashboard">Dashboard</string>
    <string name="seznamDogodkov">Prihajajoči dogodki</string>
    <string name="nicShranjenihDel">Trenutno nimaš shranjenega nobenega dela</string>
    <string name="pozor">POZOR</string>
    <string name="unsavedChanges">Vaše spremembe še niso bile shranjene. Želite vseeno zapustiti aktivnost?</string>
    <string name="izvozi">IZVOZI</string>
    <string name="ustvariProfil">Ustvari svoj profil.</string>
    <string name="premissionDenied">Dovoljenje za dostop do podatkov zavrnjeno.</string>
    <string name="alreadyApplied">Prijava na to delo je bila oddana</string>
    <string name="errorNoProfileData">Preden se prijaviš na delo izpolni svoj življenjepis</string>
    <string name="incorrectEntry">Napaka pri vnosu</string>
    <string name="apply">POTRDI</string>
    <string name="noJobsForFilter">Izbranemu filtru ne ustreza nobena ponudba.</string>
    <string name="cvFilename">CV.pdf</string>
    <string name="connectionError">Vzpostavite povezavo z internetom in poskusite ponovno</string>
    <string name="reloadContent">Ponovno naloži</string>
    <string name="podrobnosti_dogodka">Podrobnosti Dogodka</string>
</resources>