<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autoSizeTextType="uniform"
        android:layout_margin="20dp"
        android:text="@string/zivljenjepis"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/ime"
        android:hint="@string/ime"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dip"
            android:layout_weight="3"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/ulica"
            android:hint="@string/ulica"/>
        <EditText
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/hisnaSt"
            android:hint="@string/hisnaSt"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dip"
            android:layout_weight="2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/postnaSt"
            android:hint="@string/postnaSt"/>
        <EditText
            android:layout_width="0dip"
            android:layout_weight="5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/kraj"
            android:hint="@string/kraj"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:autoSizeTextType="uniform"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/kontakt"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/baseline_mail_outline_24"/>
        <EditText
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="@string/email"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/baseline_phone_24"/>
        <EditText
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/telefon"
            android:hint="@string/telefonskaSt"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:autoSizeTextType="uniform"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/izobrazba"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/izobrazbaStart"
            android:hint="@string/od"/>

        <EditText
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/izobrazbaEnd"
            android:hint="@string/oddo"/> <!-- Ta stvar "do" bere v angleščini in noče pustit stringa, ki se imenuje sam "do" !-->

        <EditText
            android:layout_width="0dip"
            android:layout_weight="5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/studijskaSmer"
            android:hint="@string/studijskaSmer"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newIzobrazba"
        android:text="@string/gumbDodaj"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:autoSizeTextType="uniform"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/delovneIzkusnje"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/deloStart"
            android:hint="@string/od"/>

        <EditText
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/deloEnd"
            android:hint="@string/oddo"/> <!-- Ta stvar "do" bere v angleščini in noče pustit stringa, ki se imenuje sam "do" !-->

        <EditText
            android:layout_width="0dip"
            android:layout_weight="5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"
            android:id="@+id/delovnoMesto"
            android:hint="@string/delovnoMesto"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newDelovnoMesto"
        android:text="@string/gumbDodaj"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

</LinearLayout>