<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="2dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/start"
        android:hint="@string/od"
        android:background="?attr/colorSecondary"
        android:padding="5dp"
        android:layout_marginVertical="5dp"/>

    <EditText
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/end"
        android:hint="@string/oddo"
        android:background="?attr/colorSecondary"
        android:padding="5dp"
        android:layout_marginVertical="5dp"/> <!-- Ta stvar "do" bere v angleščini in noče pustit stringa, ki se imenuje sam "do" !-->

    <EditText
        android:layout_width="0dip"
        android:layout_weight="5"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/opis"
        android:hint="@string/studijskaSmer"
        android:background="?attr/colorSecondary"
        android:padding="5dp"
        android:layout_marginVertical="5dp"/>
</LinearLayout>